# py-max-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
bot_types/: __init__.py  attachment.py  attachment_request.py  attachment_type.py  base.py  bot_command.py  chat.py  chat_link.py  chat_status.py  chat_type.py  image.py  linked_message.py  markup_element.py  markup_element_type.py  me.py  message.py  message_body.py  message_link_type.py  message_stat.py  new_message_body.py  new_message_link.py  photo_attachment_payload.py  photo_attachment_request_payload.py  recipient.py  success_or_message.py  text_format.py  upload.py  user.py  user_with_photo.py  video.py  video_urls.py
client/: bot.py  session.py
methods/: __init__.py  base.py  edit_message.py  get_chats.py  get_me.py  get_message.py  get_messages.py  get_video.py  send_message.py  update_me.py  upload.py
py_max_api/: __init__.py
py_max_api/bot_types/: __init__.py  attachment.py  attachment_request.py  attachment_type.py  base.py  bot_command.py  chat.py  chat_link.py  chat_status.py  chat_type.py  image.py  linked_message.py  markup_element.py  markup_element_type.py  me.py  message.py  message_body.py  message_link_type.py  message_stat.py  new_message_body.py  new_message_link.py  photo_attachment_payload.py  photo_attachment_request_payload.py  recipient.py  success_or_message.py  text_format.py  update.py  update_type.py  updates.py  upload.py  upload_type.py  user.py  user_with_photo.py  video.py  video_urls.py
py_max_api/client/: bot.py  session.py
(+16 files in other folders)
