[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_max_api"
version = "0.1.0"
description = "Python SDK for MAX Bot API"
authors = [
    {name = "Maxim", email = "mdolgov3228@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "dotenv==0.9.9",
    "frozenlist==1.7.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.4.4",
    "mypy_extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pyOpenSSL==25.1.0",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3==2.4.0",
    "yarl==1.20.1",
]
